// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLIGuide renders the contents when open 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fZqRnx"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hKLvXb CLIGuide__StyledAccordion-sc-1q6mc5x-0 VozNo"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hoPFxc"
      >
        <button
          aria-expanded="true"
          class="StyledButtonKind-sc-1vhfpnt-0 fCDdYY"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kOZkFt"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 ilrmLO"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 iPFcFJ fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dBHSGM"
              />
              <span
                class="StyledText-sc-1sadyjn-0 fWxpFz"
              >
                Get something from somewhere via the Management API
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 jVRlqT"
            >
              <svg
                aria-label="FormUp"
                class="StyledIcon-sc-ofa7kd-0 beBVfJ"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 15-6-6-6 6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 dEaSmx"
          role="region"
          style=""
        >
          <div
            aria-hidden="false"
            class="StyledBox-sc-13pk1d4-0 dEaSmx Collapsible__AnimatedBox-sc-15kniua-0 kCNXHn"
            open=""
            style="max-height: 0;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 kcBNrk"
            >
              Just some content
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuide renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fZqRnx"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hKLvXb CLIGuide__StyledAccordion-sc-1q6mc5x-0 VozNo"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hoPFxc"
      >
        <button
          aria-expanded="false"
          class="StyledButtonKind-sc-1vhfpnt-0 fCDdYY"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kOZkFt"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 ilrmLO"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 iPFcFJ fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dBHSGM"
              />
              <span
                class="StyledText-sc-1sadyjn-0 fWxpFz"
              >
                Get something from somewhere via the Management API
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 jVRlqT"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 beBVfJ"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 dEaSmx"
          role="region"
        >
          <div
            aria-hidden="true"
            class="StyledBox-sc-13pk1d4-0 dEaSmx Collapsible__AnimatedBox-sc-15kniua-0 dTvbxu"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuidesList renders the children as-is if there is only one 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fZqRnx"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dEaSmx"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hKLvXb CLIGuide__StyledAccordion-sc-1q6mc5x-0 VozNo"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 hoPFxc"
        >
          <button
            aria-expanded="false"
            class="StyledButtonKind-sc-1vhfpnt-0 fCDdYY"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 kOZkFt"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 ilrmLO"
              >
                <span
                  aria-hidden="true"
                  class="StyledText-sc-1sadyjn-0 iPFcFJ fa fa-shell"
                  role="presentation"
                />
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dBHSGM"
                />
                <span
                  class="StyledText-sc-1sadyjn-0 fWxpFz"
                >
                  Get something from somewhere via the Management API
                </span>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 jVRlqT"
              >
                <svg
                  aria-label="FormDown"
                  class="StyledIcon-sc-ofa7kd-0 beBVfJ"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m18 9-6 6-6-6"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </button>
          <div
            class="StyledBox-sc-13pk1d4-0 dEaSmx"
            role="region"
          >
            <div
              aria-hidden="true"
              class="StyledBox-sc-13pk1d4-0 dEaSmx Collapsible__AnimatedBox-sc-15kniua-0 dTvbxu"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuidesList renders the contents when open 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fZqRnx"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jYGOkw"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hoPFxc"
      >
        <button
          aria-expanded="true"
          class="StyledButtonKind-sc-1vhfpnt-0 fCDdYY"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kOZkFt"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 fCjFws"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 yzFQy fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dBHSGM"
              />
              <span
                class="StyledText-sc-1sadyjn-0 jgpRFU"
              >
                Use the API to …
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 jVRlqT"
            >
              <svg
                aria-label="FormUp"
                class="StyledIcon-sc-ofa7kd-0 beBVfJ"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 15-6-6-6 6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 dEaSmx"
          role="region"
          style=""
        >
          <div
            aria-hidden="false"
            class="StyledBox-sc-13pk1d4-0 dEaSmx Collapsible__AnimatedBox-sc-15kniua-0 kCNXHn"
            open=""
            style="max-height: 0;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 cawQRs"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 hKLvXb CLIGuide__StyledAccordion-sc-1q6mc5x-0 VozNo"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 hoPFxc"
                >
                  <button
                    aria-expanded="false"
                    class="StyledButtonKind-sc-1vhfpnt-0 fCDdYY"
                    type="button"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 kOZkFt"
                    >
                      <div
                        class="StyledBox-sc-13pk1d4-0 ilrmLO"
                      >
                        <span
                          aria-hidden="true"
                          class="StyledText-sc-1sadyjn-0 iPFcFJ fa fa-shell"
                          role="presentation"
                        />
                        <div
                          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dBHSGM"
                        />
                        <span
                          class="StyledText-sc-1sadyjn-0 fWxpFz"
                        >
                          Get something from somewhere
                        </span>
                      </div>
                      <div
                        class="StyledBox-sc-13pk1d4-0 jVRlqT"
                      >
                        <svg
                          aria-label="FormDown"
                          class="StyledIcon-sc-ofa7kd-0 beBVfJ"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m18 9-6 6-6-6"
                            fill="none"
                            stroke="#000"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                  <div
                    class="StyledBox-sc-13pk1d4-0 dEaSmx"
                    role="region"
                  >
                    <div
                      aria-hidden="true"
                      class="StyledBox-sc-13pk1d4-0 dEaSmx Collapsible__AnimatedBox-sc-15kniua-0 dTvbxu"
                    />
                  </div>
                </div>
              </div>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gwMrom"
              />
              <div
                class="StyledBox-sc-13pk1d4-0 hKLvXb CLIGuide__StyledAccordion-sc-1q6mc5x-0 VozNo"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 hoPFxc"
                >
                  <button
                    aria-expanded="false"
                    class="StyledButtonKind-sc-1vhfpnt-0 fCDdYY"
                    type="button"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 kOZkFt"
                    >
                      <div
                        class="StyledBox-sc-13pk1d4-0 ilrmLO"
                      >
                        <span
                          aria-hidden="true"
                          class="StyledText-sc-1sadyjn-0 iPFcFJ fa fa-shell"
                          role="presentation"
                        />
                        <div
                          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dBHSGM"
                        />
                        <span
                          class="StyledText-sc-1sadyjn-0 fWxpFz"
                        >
                          Get something else from somewhere else
                        </span>
                      </div>
                      <div
                        class="StyledBox-sc-13pk1d4-0 jVRlqT"
                      >
                        <svg
                          aria-label="FormDown"
                          class="StyledIcon-sc-ofa7kd-0 beBVfJ"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m18 9-6 6-6-6"
                            fill="none"
                            stroke="#000"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                  <div
                    class="StyledBox-sc-13pk1d4-0 dEaSmx"
                    role="region"
                  >
                    <div
                      aria-hidden="true"
                      class="StyledBox-sc-13pk1d4-0 dEaSmx Collapsible__AnimatedBox-sc-15kniua-0 dTvbxu"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuidesList renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fZqRnx"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dEaSmx"
    />
  </div>
</div>
`;
